--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<form action="Login" method="post">  
-Name:<input type="text" name="userName"/><br/>  
-Password:<input type="password" name="userPass"/><br/>  
-<input type="submit" value="login"/>  
+<form action="DemoServe1" method="get">  
+Enter your name<input type="text" name="name"><br>  
+<input type="submit" value="login">  
 </form>  
-
-</body>
-</html>
